add nav section

--- a/index.html
+++ b/index.html
@@ -8,17 +8,25 @@
 </head>
 <body>
       <!-- box di testa -->
-    <header class="header-top">
-        <section class="deck-top">
-            <div class="card-top"></div>
-            <div class="card-top long"></div>
-            <div class="card-top"></div>
-        </section>
-    </header>
-    <header class="header-bottom container">
-        <div class="header-box"></div>
-    </header>
-    <!-- sezione principale -->
+    <div class="background-header">   
+      <header class="nav">
+            <section class="deck-nav">
+                <div class="card-nav">
+                    <img class="logo" src="img/logo.svg" alt="discord logo">
+                </div>
+                <div class="card-nav long">
+                    <a href="#">Scarica</a><a href="#">Perche Discord</a><a href="#">Nitro</a><a href="#">Sicurezza</a><a href="#">Assitenza</a>
+                </div>
+                <div class="card-nav">
+                    <button class="login">Accedi</button>
+                </div>
+            </section>
+        </header>
+        <header class="spotlight container">
+            <div class="spotlight-box"></div>
+        </header>
+    </div> 
+        <!-- sezione principale -->
     <div class="container">
         <div class="deck">
             <div class="card-xl"></div>
