add spotlight and buttons

--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
             </section>
         </header>
         <header class="spotlight container">
-            <div class="spotlight-box"></div>
+            <div class="spotlight-box">
+                <h1 class="text-white">Il tuo posto per parlare</h1>
+                <p class="text-white">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica<br>
+                    mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo<br>
+                     assieme, Discord rende piu facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+                     <button>Scarica per Mac</button><button>Apri Discord nel tuo browser</button>
+            </div>
         </header>
     </div> 
         <!-- sezione principale -->
