--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css' integrity='sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==' crossorigin='anonymous'/>
     <link rel="stylesheet" href="css/style.css">
     <title>htmlcss-struttura-discord</title>
 </head>
@@ -28,15 +29,30 @@
                 <p class="text-white">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica<br>
                     mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo<br>
                      assieme, Discord rende piu facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
-                     <button>Scarica per Mac</button><button>Apri Discord nel tuo browser</button>
+                     <div class="download">
+                        <button><i class="fa-solid fa-arrow-down-long"></i> Scarica per Mac</button><button class="text-white dark-button ">Apri Discord nel tuo browser</button>
+                     </div>
             </div>
         </header>
     </div> 
         <!-- sezione principale -->
     <div class="container">
         <div class="deck">
-            <div class="card-xl"></div>
-            <div class="card-xs"></div>
+            <div class="card-xl">
+                <img src="img/item1.svg" alt="study group">
+            </div>
+            <div class="card-xs">
+                <h2>Un luogo a <br>
+                     invito con tutto <br>
+                    lo spazio <br>
+                    necessario per <br>
+                    parlare</h2>
+                    <p>I server Discord sono organizzati in <br>
+                    canali tematici dove puoi collaborare, <br>
+                    condividere o semplicemente parlare <br>
+                    della tua giornata senza intasare una <br>
+                    chat di gruppo</p>
+            </div>
         </div>
     </div>
     <div class="container gray">
