--- a/index.html
+++ b/index.html
@@ -46,35 +46,69 @@
                      invito con tutto <br>
                     lo spazio <br>
                     necessario per <br>
-                    parlare</h2>
-                    <p>I server Discord sono organizzati in <br>
+                    parlare
+                </h2>
+                <p>I server Discord sono organizzati in <br>
                     canali tematici dove puoi collaborare, <br>
                     condividere o semplicemente parlare <br>
                     della tua giornata senza intasare una <br>
-                    chat di gruppo</p>
+                    chat di gruppo
+                </p>
             </div>
         </div>
     </div>
     <div class="container gray">
         <div class="deck reverse">
-            <div class="card-xl"></div>
-            <div class="card-xs"></div>
+            <div class="card-xl">
+                <img src="img/item2.svg" alt="iust-chillin">
+            </div>
+            <div class="card-xs">
+                <h2>Dove trovarsi é facile</h2>
+                <p>Mettiti comodo in un canale vocale <br>
+                    quando hai tempo. Gli amici nel tuo <br>
+                    server possono vedere che sei lì e unirsi <br>
+                    istantaneamente senza dover chiamare.
+                </p>    
+            </div>
         </div>
     </div>
     <div class="container">
         <div class="deck">
-            <div class="card-xl"></div>
-            <div class="card-xs"></div>
+            <div class="card-xl">
+                <img src="img/item3.svg" alt="Coach">
+            </div>
+            <div class="card-xs">
+                <h2>Da pochi a un fandom</h2>
+                <p>Dai inizio a una community di qualsiasi <br>
+                    dimensione con strumenti di <br>
+                    moderazione e accesso ai membri <br>
+                    personalizzabile. Concedi ai membri <br>
+                    poteri speciali, crea canali privati, e <br>
+                    molto altro.
+                </p>
+            </div>
         </div>
     </div>
     <!-- container grande dopo main -->
     <section class="container gray">
-        <div class="deck green"></div>
+        <div class="deck-xl">
+            <h3>Tecnologia affidabile per tenersi in contatto</h3>
+            <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video. guarda <br>
+                gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.
+            </p>
+            <img class="img-xl" src="img/item4-big.svg" alt="just-chillin">
+            <h4>Pronto a iniziare la tua avventura?</h4>
+            <button class="text-white skyblue"><i class="fa-solid fa-arrow-down-long"></i> Scarica per Mac</button>
+        </div>
     </section>
     <!-- navigazione fondo pagina -->
     <nav class="container dark">
         <div class="deck">
-            <div class="col social"></div>
+            <div class="col social">
+                <h5>Il tuo posto per
+                    parlare
+                </h5>
+            </div>
             <div class="col"></div>
             <div class="col"></div>
             <div class="col"></div>
